--- a/src/app/privado/home/home.component.html
+++ b/src/app/privado/home/home.component.html
@@ -82,6 +82,6 @@
 
 		</div>
 		<!--/row-->
-		<app-modal-estados [model]="model" (success)="onSuccessEstados($event)" (cancelaEstados)="onCancelaEstados()"></app-modal-estados>
+		<app-modal-estados [model]="model" (success)="onSuccessEstados()" (cancelaEstados)="onCancelaEstados()"></app-modal-estados>
 	</div>
 	<!--/.container-->
