--- a/src/app/privado/home/home.component.html
+++ b/src/app/privado/home/home.component.html
@@ -30,13 +30,22 @@
 			</p> -->
 			<ul class="nav nav-tabs" id="myTab" role="tablist">
 				<li class="nav-item">
-					<a class="nav-link active" id="llegadas-tab" data-toggle="tab" href="#llegadas" role="tab" aria-controls="home" aria-expanded="true">Llegadas{{ ' (' + llegadas.length + ')'}}</a>
+					<a class="nav-link active" id="llegadas-tab" data-toggle="tab" href="#llegadas" role="tab" aria-controls="home" aria-expanded="true">						 
+						<i class="fa fa-suitcase" aria-hidden="true"></i>
+						Llegadas{{ ' (' + llegadas.length + ')'}}
+					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" id="salidas-tab" data-toggle="tab" href="#salidas" role="tab" aria-controls="salidas">Salidas{{ ' (' + salidas.length + ')'}}</a>
+					<a class="nav-link" id="estancias-tab" data-toggle="tab" href="#estancias" role="tab" aria-controls="estancias">
+						<i class="fa fa-bed" aria-hidden="true"></i>
+						Estancias{{ ' (' + estancias.length + ')'}}
+					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" id="estancias-tab" data-toggle="tab" href="#estancias" role="tab" aria-controls="estancias">Estancias{{ ' (' + estancias.length + ')'}}</a>
+					<a class="nav-link" id="salidas-tab" data-toggle="tab" href="#salidas" role="tab" aria-controls="salidas">						
+						<i class="fa fa-plane" aria-hidden="true"></i>
+						Salidas{{ ' (' + salidas.length + ')'}}
+					</a>
 				</li>
 			</ul>
 			<div class="tab-content" id="myTabContent">
@@ -44,13 +53,13 @@
 					<br>					
 					<app-card-reserva [loading]="loadingllegadas" [reservas]="llegadas" (cambiarEstado)="onCambiarEstado($event)"></app-card-reserva>
 				</div>
-				<div class="tab-pane fade" id="salidas" role="tabpanel" aria-labelledby="salidas-tab">
-					<br>
-					<app-card-reserva [loading]="loadingsalidas" [reservas]="salidas" (cambiarEstado)="onCambiarEstado($event)"></app-card-reserva>
-				</div>
 				<div class="tab-pane fade" id="estancias" role="tabpanel" aria-labelledby="estancias-tab">
 					<br>
 					<app-card-reserva [loading]="loadingestancias" [reservas]="estancias" (cambiarEstado)="onCambiarEstado($event)"></app-card-reserva>
+				</div>
+				<div class="tab-pane fade" id="salidas" role="tabpanel" aria-labelledby="salidas-tab">
+					<br>
+					<app-card-reserva [loading]="loadingsalidas" [reservas]="salidas" (cambiarEstado)="onCambiarEstado($event)"></app-card-reserva>
 				</div>
 			</div>
 			<br>
