--- a/src/app/privado/reserva/modal-reserva/detalle-reserva/detalle-reserva.component.html
+++ b/src/app/privado/reserva/modal-reserva/detalle-reserva/detalle-reserva.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header bg-primary text-light">
-  <h4 class="modal-title text-secondary">{{!model.estado || model.estado !== 'Pr' ? 'Reserva' : 'Proforma'}}</h4>
+  <h4 class="modal-title text-secondary">{{!model.estado || model.estado !== 'Pr' ? 'Reserva | ' + (model.idReserva || '') : 'Proforma'}}</h4>
   <font>{{'Estado: ' + getEstado()}}</font>
 </div>
 <div class="modal-body">
