correccion de consulta ext - problema reportado Candres

--- a/src/app/publico/index/index.component.html
+++ b/src/app/publico/index/index.component.html
@@ -1,19 +1,19 @@
 <section class="cuadro-img">
-	<br>
-	<div class="container">
-		<br>
+	<div class="container-fluid">		
 		<div class="row">
-			<div class="col-md-8">
-				<div class="texto">
-					<h1>Organiza tus reservas</h1>
-					<p>Bienvenido a Chaskiy, tu sistema de reserva de hospedaje que se adapta a tu negocio.</p>
+			<div class="col-md-3 col-sm-12">
+			</div>
+			<div class="col-md-9 col-sm-12">
+				<br>
+				<div class="jumbotron">
+					<h1 class="display-6 text-primary">La solución que se ajusta a tu pequeño GRAN HOSPEDAJE</h1>
+					<p class="lead">Encuentra en esta herramienta todo lo que necesitas para administrar tu HOSPEDAJE como un gran hotelero.</p>
+					<hr class="my-4">
+					<a class="btn btn-info btn-lg mx-2" href="#" role="button">Prueba gratis</a>
+					<a class="btn btn-outline-primary btn-lg mx-2" href="#" role="button">Inicia sesión</a>
 				</div>
 			</div>
-			<div class="col-md-4">
-				<img src="/assets/images/bienvenida.svg" class="img-fluid" alt="bienvenida">
-			</div>
 		</div>
-		<br>
 	</div>
 </section>
 <section class="caracteristicas">
@@ -21,38 +21,51 @@
 	<div class="container-fluid">
 		<div class="containter">
 			<div class="row">
-				<h2 class="ml-auto mr-auto mt-3 text-muted">Mantén todo organizado</h2>
+				<h2 class="mx-auto my-3 text-muted">Mantén todo organizado</h2>
 			</div>
 			<div class="row">
-				<h4 class="ml-auto mr-auto mt-1 text-center">Deja de apuntar todo en tu agenda, y saca provecho de lo que te ofrecemos</h4>
+				<h4 class="mx-auto my-3 text-center">Deja de apuntar todo en tu agenda, y saca provecho de lo que te ofrecemos</h4>
 			</div>
-			<div class="row features">
-				<div class="col-md-4 text-center">
-					<p class="img">
-						<i class="fa fa-bed" aria-hidden="true"></i>
-					</p>
-					<h2>Habitaciones</h2>
-					<p>Registra tus habitaciones y controla la disponibilidad, llegadas, estancias y salidas de tus pasajeros sin perderte
-						ningún detalle</p>
-					<!-- <a href="#" class="btn btn-secundary btn-lg">Mas información</a> -->
+			<div class="row">
+				<div class="col-sm-12 col-md-4 mb-2 text-center">
+					<div class="card">
+						<h1 class="display-1 text-primary">
+							<i class="fa fa-bed" aria-hidden="true"></i>
+						</h1>
+						<div class="card-body">
+							<h5 class="card-title">Habitaciones</h5>
+							<p>Registra tus habitaciones y controla la disponibilidad, llegadas, estancias y salidas de tus pasajeros sin perderte ningún
+								detalle</p>
+						</div>
+					</div>
 				</div>
-				<div class="col-md-4 text-center">
-					<p class="img">
-						<i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-					</p>
-					<h2>Correo electrónico</h2>
-					<p>Envia a través de Chaskiy proformas o confirmaciones de hospedaje a tus pasajeros para que no pierdan de vista sus reservas</p>
+				<div class="col-sm-12 col-md-4 mb-2 text-center">
+					<div class="card">
+						<h1 class="display-1 text-primary">
+							<i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+						</h1>
+						<div class="card-body">
+							<h5 class="card-title">Correo electrónico</h5>
+							<p>Envía a través de Chaskiy cotizaciones o confirmaciones de hospedaje a tus pasajeros para que no pierdan de vista sus reservas</p>
+						</div>
+					</div>										
 				</div>
-				<div class="col-md-4 text-center">
-					<p class="img">
-						<i class="fa fa-money" aria-hidden="true"></i>
-					</p>
-					<h2>Pagos</h2>
-					<p>Registra los pagos de cada reserva para el control de los ingresos monetarios que genera tu hospedaje</p>
+				<div class="col-sm-12 col-md-4 mb-2 text-center">
+					<div class="card">
+						<h1 class="display-1 text-primary">
+							<i class="fa fa-money" aria-hidden="true"></i>
+						</h1>
+						<div class="card-body">
+							<h5 class="card-title">Pagos</h5>
+							<p>Registra los pagos de cada reserva para llevar el óptimo control de los ingresos que genera tu hospedaje</p>
+						</div>
+					</div>					
 				</div>
+			</div>
+			<div class="row my-3">
+				<a class="btn btn-primary btn-lg mx-auto" href="#" role="button">Conoce más</a>
 			</div>
 		</div>
-
 	</div>
 	<br>
 </section>
@@ -64,17 +77,17 @@
 	<div class="row clientes">
 		<div class="col-4 text-center">
 			<a target="_blank" href="https://www.casadcristhi.com/">
-				<img src="assets/images/casadcristhi.jpg" height="150px" width="150px">
+				<img src="https://via.placeholder.com/150x150?text=Tu%20marca%20aqui" height="150px" width="150px">
 			</a>
 		</div>
 		<div class="col-4 text-center">
 			<a target="_blank" href="https://www.casadcristhi.com/">
-				<img src="assets/images/casadcristhi.jpg" height="150px" width="150px">
+				<img src="assets/images/dcristhi_300x300.png" height="150px" width="150px">
 			</a>
 		</div>
 		<div class="col-4 text-center">
 			<a target="_blank" href="https://www.casadcristhi.com/">
-				<img src="assets/images/casadcristhi.jpg" height="150px" width="150px">
+				<img src="https://via.placeholder.com/150x150?text=Tu%20marca%20aqui" height="150px" width="150px">
 			</a>
 		</div>
 	</div>
