--- a/src/app/compartido/components/header/header.component.html
+++ b/src/app/compartido/components/header/header.component.html
@@ -1,51 +1,21 @@
-<section>
-  <header class="exbrand">
-    <nav class="navbar navbar-expand-lg navbar-blue fixed-top">
-      <a class="navbar-brand" [routerLink]="['/']">
-        <img src="/assets/images/chaskiy-brand.svg" alt="chaskiy-brand">
-      </a>
-      <button *ngIf="!isLogged()" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-sup" aria-controls="nav-sup" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <i class="fa fa-bars" aria-hidden="true"></i>
-      </button>
+<nav class="navbar navbar-expand-md bg-light">
+  <a class="navbar-brand" href="#">Expand at md</a>
+  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navContent" aria-controls="navContent"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-      <div *ngIf="!isLogged()" class="collapse navbar-collapse" id="nav-sup">
-        <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-          <li class="nav-item">
-            <a class="nav-link text-center" [routerLink]="['/index']">Inicio</a>
-          </li>
-          <!-- <li class="nav-item">
-        			        <a class="nav-link text-center" [routerLink]="['/register']">Precios</a>
-        			      </li> -->
-          <li class="nav-item">
-            <a class="nav-link text-center" [routerLink]="['/registro']">Registro</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-center" [routerLink]="['/login']">Login</a>
-          </li>
-        </ul>
-      </div>
-      <div *ngIf="chasker" class="d-flex flex-row-reverse w-100">
-        <div class="p-2">
-          <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" style="font-size:1rem;" href="#" id="ddMenu" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">
-                {{chasker.nombre}}
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="ddMenu">
-                <a class="dropdown-item" [routerLink]="['/contrasena']">Cambiar Contraseña
-                  <i class="fa fa-key" aria-hidden="true"></i>
-                </a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" [routerLink]="['/login']">Logout
-                  <i class="fa fa-sign-out" aria-hidden="true"></i>
-                </a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
-</section>
+  <div class="navbar-collapse collapse" id="navContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Inicio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Solicita una prueba</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-md-0">
+      <a class="btn btn-outline-primary" href="#">Iniciar sesión</a>
+    </form>
+  </div>
+</nav>
