--- a/src/app/privado/tarifa/tarifa.component.html
+++ b/src/app/privado/tarifa/tarifa.component.html
@@ -1,7 +1,5 @@
 <br>
 <br>
-<br>
-<br>
 <div class="container">
   <h2>Tarifas
     <small>({{tarifas.length}})</small>
@@ -83,7 +81,7 @@
             <br> Entre los tipos de tarifas que puedes registrar estan:
           </p>
           <ul>
-            <li *ngFor="let op of tipos">{{op.tipotarifa}}</li>
+            <li *ngFor="let op of tipos">{{op.tipoTarifa}}</li>
           </ul>
         </div>
       </div>
