--- a/src/app/publico/login/login.component.html
+++ b/src/app/publico/login/login.component.html
@@ -13,9 +13,9 @@
                   <h1 class="display-3">Bienvenido a, Chaskiy</h1>
                   <p class="lead">Inicia sesión y descubre las bondades de organizar las reservas de tu hospedaje a través de Chaskiy</p>
                   <hr class="my-4">
-                  <p>Si no tienes todavía tu cuenta crea una gratis!</p>
+                  <p>Si no tienes todavía tu cuenta, solicita una prueba gratis.</p>
                   <p class="lead">
-                    <a class="btn btn-outline-primary btn-lg" [routerLink]="['/registro']" role="button">Regístrate</a>
+                    <a class="btn btn-outline-primary btn-lg" [routerLink]="['/prueba']" role="button">Prueba gratis</a>
                   </p>
                 </div>
             </div>
