--- a/src/app/compartido/components/footer/footer.component.html
+++ b/src/app/compartido/components/footer/footer.component.html
@@ -4,35 +4,26 @@
       <div class="row">
         <div class="col-12 col-md">
           <img class="mb-2" src="../../assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
-          <small class="d-block mb-3 text-muted">© 2017-2018</small>
+          <small class="d-block mb-3 text-muted">© Chaskiy 2018</small>
         </div>
         <div class="col-6 col-md">
-          <h5>Features</h5>
+          <h5>Características principales</h5>
           <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">Cool stuff</a></li>
-            <li><a class="text-muted" href="#">Random feature</a></li>
-            <li><a class="text-muted" href="#">Team feature</a></li>
-            <li><a class="text-muted" href="#">Stuff for developers</a></li>
-            <li><a class="text-muted" href="#">Another one</a></li>
-            <li><a class="text-muted" href="#">Last time</a></li>
+            <!-- <li><a class="text-muted" href="#">Cool stuff</a></li> -->
           </ul>
         </div>
         <div class="col-6 col-md">
-          <h5>Resources</h5>
+          <h5>Compañía</h5>
           <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">Resource</a></li>
-            <li><a class="text-muted" href="#">Resource name</a></li>
-            <li><a class="text-muted" href="#">Another resource</a></li>
-            <li><a class="text-muted" href="#">Final resource</a></li>
+            <li><a class="text-muted" href="#">Contacto</a></li>
+            <li><a class="text-muted" href="#">Acerca de nosotros</a></li>
           </ul>
         </div>
         <div class="col-6 col-md">
-          <h5>About</h5>
+          <h5>Acerca</h5>
           <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">Team</a></li>
-            <li><a class="text-muted" href="#">Locations</a></li>
-            <li><a class="text-muted" href="#">Privacy</a></li>
-            <li><a class="text-muted" href="#">Terms</a></li>
+            <li><a class="text-muted" [routerLink]="['/terminos']">Términos y condiciones</a></li>
+            <li><a class="text-muted" [routerLink]="['/privacidad']">Políticas de privacidad</a></li>
           </ul>
         </div>
       </div>
