--- a/src/styles.css
+++ b/src/styles.css
@@ -91,3 +91,13 @@ CUANDO SE TIENE MUCHAS HABITACIONES */
 	overflow-y: auto;
 	overflow-x: hidden;
 }
+
+.card.hoverable {
+  cursor: pointer;
+  transition: border-left 0.1s;
+}
+
+.card.hoverable:hover {
+  transition: border-left 0.2s;  
+  border-left: 2px solid #37474f;
+}
