hasta iva en front

--- a/src/app/compartido/generico/generico.component.html
+++ b/src/app/compartido/generico/generico.component.html
@@ -19,7 +19,7 @@
             </div>
             <div *ngIf="f.submitted && !correo.valid" class="invalid-feedback">Ingrese un electrónico válido</div>
             <div *ngIf="correo.touched && !correo.valid && !f.submitted">
-              <p class="text-danger">Ingrese un electrónico válido</p>
+              <p class="text-danger">Ingrese un correo electrónico válido</p>
             </div>
           </div>
           <div class="form-group">
