estadisticas de ocupacion y fuentes de captacion

--- a/src/app/privado/pagos/pagos.component.html
+++ b/src/app/privado/pagos/pagos.component.html
@@ -93,7 +93,7 @@
 					<h4 class="card-title">Ayuda</h4>
 					<p class="card-text">
 						No pierdas de vista los pagos que se generan con tus reservas, busca tus pagos y genera tu estadístca con las fechas que
-						tu eljas.
+						tu elijas.
 					</p>
 				</div>
 			</div>
