--- a/src/app/privado/contrasena/contrasena.component.html
+++ b/src/app/privado/contrasena/contrasena.component.html
@@ -1,44 +1,94 @@
-<br>
-<br>
-<br>
+<br />
+<br />
+<br />
 <div class="container">
   <div class="col-md-6 ml-auto mr-auto">
     <h2>Actualizar contraseña</h2>
     <div class="card mt-4">
       <div class="card-body">
-        <form name="form" (ngSubmit)="f.form.valid && guardar(f)" #f="ngForm" [ngClass]="{ 'was-validated': f.submitted }" novalidate>
+        <form
+          name="form"
+          (ngSubmit)="f.form.valid && guardar(f)"
+          #f="ngForm"
+          [ngClass]="{ 'was-validated': f.submitted }"
+          novalidate
+        >
           <h4 class="card-subtitle mb-2 text-muted">Anterior</h4>
-          <hr class="my-2">
+          <hr class="my-2" />
           <div class="form-group">
             <label for="password">Contraseña</label>
-            <input type="password" class="form-control" name="password1" [(ngModel)]="model.password1" #password1="ngModel"
-              required />
-            <div *ngIf="f.submitted && !password1.valid" class="invalid-feedback">La actual contraseña es requerida</div>
+            <input
+              type="password"
+              class="form-control"
+              name="password1"
+              [(ngModel)]="model.password1"
+              #password1="ngModel"
+              required
+            />
+            <div
+              *ngIf="f.submitted && !password1.valid"
+              class="invalid-feedback"
+            >
+              La actual contraseña es requerida
+            </div>
           </div>
           <h4 class="card-subtitle mb-2 text-muted">Actual</h4>
-          <hr class="my-2">
+          <hr class="my-2" />
           <div class="form-group">
             <label for="password">Contraseña</label>
-            <input type="password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel" (ngModelChange)="valuechange_pass($event)"
-              required />
-            <div *ngIf="f.submitted && !password.valid" class="invalid-feedback">La nueva contraseña es requerida</div>
+            <input
+              type="password"
+              class="form-control"
+              name="password"
+              [(ngModel)]="model.password"
+              #password="ngModel"
+              (ngModelChange)="valuechange_pass($event)"
+              required
+            />
+            <div
+              *ngIf="f.submitted && !password.valid"
+              class="invalid-feedback"
+            >
+              La nueva contraseña es requerida
+            </div>
           </div>
           <div class="form-group">
             <label for="password0">Repetir la contraseña</label>
-            <input type="password" class="form-control" name="password0" [(ngModel)]="model.password0" #password0="ngModel" (ngModelChange)="valuechange_pass($event)"
-              required />
-            <div *ngIf="f.submitted && !password0.valid" class="invalid-feedback">Repita la contraseña</div>
+            <input
+              type="password"
+              class="form-control"
+              name="password0"
+              [(ngModel)]="model.password0"
+              #password0="ngModel"
+              (ngModelChange)="valuechange_pass($event)"
+              required
+            />
+            <div
+              *ngIf="f.submitted && !password0.valid"
+              class="invalid-feedback"
+            >
+              Repita la contraseña
+            </div>
             <div *ngIf="valid_pass">
               <p class="text-warning">Las contraseñas no coinciden</p>
             </div>
             <div *ngIf="valid_pass0">
-              <p class="text-warning">La contraseñas debe contener al menos 6 caracteres</p>
+              <p class="text-warning">
+                La contraseñas debe contener al menos 6 caracteres
+              </p>
             </div>
           </div>
           <div class="form-group">
             <img *ngIf="loading" src="/assets/images/loading.svg" />
-            <button [disabled]="loading" class="btn btn-primary">Guardar</button>
-            <a *ngIf="!loading" [routerLink]="['/home']" class="btn btn-link">Cancelar</a>
+            <button [disabled]="loading" class="btn btn-primary">
+              Guardar
+            </button>
+            <a
+              *ngIf="!loading"
+              [routerLink]="['/dashboard']"
+              class="btn btn-link"
+              >Cancelar</a
+            >
           </div>
         </form>
       </div>
