--- a/src/app/privado/marcacion/marcacion.component.html
+++ b/src/app/privado/marcacion/marcacion.component.html
@@ -23,9 +23,9 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-subtitle mb-2 text-muted text-center">
-              {{ fecha.anio }}
+              AAAA
             </h4>
-            <h1 class="card-title text-center">AAAA</h1>
+            <h1 class="card-title text-center">{{ fecha.anio }}</h1>
           </div>
         </div>
       </div>
